salesforce_app/force-app/main/default/objects/Class_Session_Links__c/Class_Session_Links__c.object-meta.xml
<CustomObject>
    <label>Class Session Links</label>
    <nameField>
        <displayFormat>CSL-{00000}</displayFormat>
        <label>Class Session Links Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Session Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>