salesforce_app/force-app/main/default/objects/Class_Session_Links__c/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <label>Agenda</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>