salesforce_app/force-app/main/default/objects/Class_Session_Links__c/fields/Session_End__c.field-meta.xml
<CustomField>
    <fullName>Session_End__c</fullName>
    <label>Session End</label>
    <required>true</required>
    <type>Time</type>
</CustomField>