salesforce_app/force-app/main/default/objects/Class_Session_Links__c/fields/Session_URL__c.field-meta.xml
<CustomField>
    <fullName>Session_URL__c</fullName>
    <label>Session URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>