salesforce_app/force-app/main/default/objects/Class_Session_Links__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>